--- a/campustrack-frontend/index.html
+++ b/campustrack-frontend/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#0b1220" />
+  <!-- Apple touch icon -->
+  <link rel="apple-touch-icon" href="/vite.svg" />
     <title>campustrack-frontend</title>
   </head>
   <body>
