--- a/campustrack-frontend/index.html
+++ b/campustrack-frontend/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#0b1220" />
   <!-- Apple touch icon -->
   <link rel="apple-touch-icon" href="/vite.svg" />
-    <title>campustrack-frontend</title>
+    <title>CampusTrack</title>
   </head>
   <body>
     <div id="root"></div>
