--- a/campustrack-frontend/public/found.html
+++ b/campustrack-frontend/public/found.html
@@ -53,7 +53,7 @@
             content.innerHTML = `<div style="color:#374151">Item with id ${id} not found.</div>`;
             return;
           }
-          const imageUrl = item.imageUrl ? (item.imageUrl.startsWith('/uploads/') ? `${location.origin}${item.imageUrl}` : item.imageUrl) : null;
+          const imageUrl = item.imageUrl ? (item.imageUrl.startsWith('/uploads/') ? `${location.protocol}//${location.hostname}:8080${item.imageUrl}` : item.imageUrl) : null;
 
           // check if lostId passed so we can show confirm button
           const params = new URLSearchParams(window.location.search);
